5.1.3 -> 5.1.4:
    - rse: fix portability by providing own RPM_LIST_XXX macros in rpmmtree.c

5.1.2 -> 5.1.3:
    - rse: enhance RPM_CHECK_LIB to query pkg-config(1) --libs-only-L to get -L<dir> options, too.
    - rse: add support for "lib<name>-config" and "lib<name>.pc" in RPM_CHECK_LIB
    - rse: unbreak building without LZMAUtils library
    - jbj: fix: reattach RPMMIRE_DEFAULT as posix regex, not strcmp, pattern.
    - jbj: lzdio: start using -llzma instead.
    - jbj: tests: add coverage for %pretrans et al scriptlets.
    - rse: upgrade the embedded lrexlib Lua library from version 2.2.0 to 2.3.0
    - rse: apply upstream vendor patches from 2008-05-08 for Lua 5.1.3
    - jbj: tests: verify upgrades using the edos-test packages.
    - jbj: parser: inherit group/summary/description if not specified in subpkg.
    - jbj: parser: permit identically named sub-pkgs with different versions.
    - jbj: parser: trim comments where it makes sense to do so.
    - jbj: tests: add check-install target to attempt --relocate install.
    - jbj: tests: enhance the devtool-sanity package with scripts and a file.
    - jbj: tests: verify -Kv output using popt.
    - jbj: tests: verify setup using --version/--querytags/--showrc.
    - jbj: display noisy getconf()/uname() info with -vv --showrc instead.
    - jbj: shorten debugging messages, --queryformat strings passed to
	headerSprintf are getting huge.
    - jbj: fix: NUL terminate dst on EXPR->ARRAY parser state transition
	(see --yum:primary.yaml spew for reproducer).
    - jbj: restore deploop diagnostic message (Kacper Kornet kornet@camk.edu.pl).
    - jbj: fix: is_selinux_enbled() > 0 is the correct test.
    - rpm.org: Mask signals while moving rebuilt rpmdb into place.
    - rpm.org: Restore rpmdb selinux contexts to default after rebuild (#442149)
    - jbj: debuginfo: refactor 2 existing upgrade policy rules before
        adding a new contextually sensitive rule for -debuginfo packages.