@@ -1111,6 +1111,8 @@ static int checkHardLinks(FileList fl)
 	ilp = fl->fileList + i;
 	if (!(S_ISREG(ilp->fl_mode) && ilp->fl_nlink > 1))
 	    continue;
+	if (ilp->flags & (RPMFILE_EXCLUDE | RPMFILE_GHOST))
+	    continue;
 
 	for (j = i + 1; j < fl->fileListRecsUsed; j++) {
 	    jlp = fl->fileList + j;
@@ -1122,6 +1124,8 @@ static int checkHardLinks(FileList fl)
 		/*@innercontinue@*/ continue;
 	    if (ilp->fl_dev != jlp->fl_dev)
 		/*@innercontinue@*/ continue;
+	    if (jlp->flags & (RPMFILE_EXCLUDE | RPMFILE_GHOST))
+		continue;
 	    return 1;
 	}
     }
@@ -1601,15 +1605,6 @@ if (!(_rpmbuildFlags & 4))
 /*@=moduncon =noeffectuncon @*/
     sxfn = _free(sxfn);
 
-    ui32 = fl->totalFileSize;
-    he->tag = RPMTAG_SIZE;
-    he->t = RPM_UINT32_TYPE;
-    he->p.ui32p = &ui32;
-    he->c = 1;
-    he->append = 1;
-    xx = headerPut(h, he, 0);
-    he->append = 0;
-
 if (_rpmbuildFlags & 4) {
 (void) rpmlibNeedsFeature(h, "PayloadFilesHavePrefix", "4.0-1");
 (void) rpmlibNeedsFeature(h, "CompressedFileNames", "3.0.4-1");
@@ -1713,7 +1708,39 @@ if (_rpmbuildFlags & 4) {
 	if (isSrc)
 	    fi->fmapflags[i] |= IOSM_FOLLOW_SYMLINKS;
 
+	if (S_ISREG(flp->fl_mode)) {
+	    int bingo = 1;
+	    /* Hard links need be tallied only once. */
+	    if (flp->fl_nlink > 1) {
+		FileListRec jlp = flp + 1;
+		int j = i + 1;
+		for (; (unsigned)j < fi->fc; j++, jlp++) {
+		    if (!S_ISREG(jlp->fl_mode))
+			continue;
+		    if (flp->fl_nlink != jlp->fl_nlink)
+			continue;
+		    if (flp->fl_ino != jlp->fl_ino)
+			continue;
+		    if (flp->fl_dev != jlp->fl_dev)
+			continue;
+		    if (jlp->flags & (RPMFILE_EXCLUDE | RPMFILE_GHOST))
+		        continue;
+		    bingo = 0;	/* don't tally hardlink yet. */
+		    break;
+		}
+	    }
+	    if (bingo)
+		fl->totalFileSize += flp->fl_size;
     }
+    }
+
+    ui32 = fl->totalFileSize;
+    he->tag = RPMTAG_SIZE;
+    he->t = RPM_UINT32_TYPE;
+    he->p.ui32p = &ui32;
+    he->c = 1;
+    xx = headerPut(h, he, 0);
+
     /*@-compdef@*/
     if (fip)
 	*fip = fi;
@@ -1946,27 +1973,6 @@ static int addFile(FileList fl, const char * diskURL,
 	flp->flags = fl->currentFlags;
 	flp->specdFlags = fl->currentSpecdFlags;
 	flp->verifyFlags = fl->currentVerifyFlags;
-
-	/* Hard links need be counted only once. */
-	if (S_ISREG(flp->fl_mode) && flp->fl_nlink > 1) {
-	    FileListRec ilp;
-	    for (i = 0;  i < fl->fileListRecsUsed; i++) {
-		ilp = fl->fileList + i;
-		if (!S_ISREG(ilp->fl_mode))
-		    continue;
-		if (flp->fl_nlink != ilp->fl_nlink)
-		    continue;
-		if (flp->fl_ino != ilp->fl_ino)
-		    continue;
-		if (flp->fl_dev != ilp->fl_dev)
-		    continue;
-		break;
-	    }
-	} else
-	    i = fl->fileListRecsUsed;
-
-	if (!(flp->flags & RPMFILE_EXCLUDE) && S_ISREG(flp->fl_mode) && i >= fl->fileListRecsUsed) 
-	    fl->totalFileSize += flp->fl_size;
     }
 
     fl->fileListRecsUsed++;
@@ -2757,8 +2763,6 @@ int processSourceFiles(Spec spec)
 	flp->gname = getGname(flp->fl_gid);
 #endif
 	flp->langs = xstrdup("");
-	
-	fl.totalFileSize += flp->fl_size;
 	
 	if (! (flp->uname && flp->gname)) {
 	    rpmlog(RPMLOG_ERR, _("Bad owner/group: %s\n"), diskURL);
