@@ -1,4 +1,7 @@
 5.1.3 -> 5.1.4:
+    - jbj: fix: skip %exclude/%ghost files to get more accurate RPMTAG_SIZE.
+    - jbj: fix: RPMTAG_SIZE is incorrect with %exclude and %ghost directives
+        (Alexey Tourbin<at@altlinux.ru>).
     - rse: fix portability by providing own RPM_LIST_XXX macros in rpmmtree.c
 
 5.1.2 -> 5.1.3:
